kadai2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    FORWARD
    FUNCTION
    INTERVAL
    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM IDENT SEMICOLON outblock PERIOD
Rule 2     outblock -> var_decl_part subprog_decl_part statement
Rule 3     var_decl_part -> var_decl_list SEMICOLON
Rule 4     var_decl_part -> <empty>
Rule 5     var_decl_list -> var_decl_list SEMICOLON var_decl
Rule 6     var_decl_list -> var_decl
Rule 7     var_decl -> VAR id_list
Rule 8     subprog_decl_part -> subprog_decl_list SEMICOLON
Rule 9     subprog_decl_part -> <empty>
Rule 10    subprog_decl_list -> subprog_decl_list SEMICOLON subprog_decl
Rule 11    subprog_decl_list -> subprog_decl
Rule 12    subprog_decl -> proc_decl
Rule 13    proc_decl -> PROCEDURE proc_name SEMICOLON inblock
Rule 14    proc_name -> IDENT
Rule 15    inblock -> var_decl_part statement
Rule 16    statement_list -> statement_list SEMICOLON statement
Rule 17    statement_list -> statement
Rule 18    statement -> assignment_statement
Rule 19    statement -> if_statement
Rule 20    statement -> while_statement
Rule 21    statement -> for_statement
Rule 22    statement -> proc_call_statement
Rule 23    statement -> null_statement
Rule 24    statement -> block_statement
Rule 25    statement -> read_statement
Rule 26    statement -> write_statement
Rule 27    assignment_statement -> IDENT ASSIGN expression
Rule 28    if_statement -> IF condition THEN statement else_statement
Rule 29    else_statement -> ELSE statement
Rule 30    else_statement -> <empty>
Rule 31    while_statement -> WHILE condition DO statement
Rule 32    for_statement -> FOR IDENT ASSIGN expression TO expression DO statement
Rule 33    proc_call_statement -> proc_call_name
Rule 34    proc_call_name -> IDENT
Rule 35    block_statement -> BEGIN statement_list END
Rule 36    read_statement -> READ LPAREN IDENT RPAREN
Rule 37    write_statement -> WRITE LPAREN expression RPAREN
Rule 38    null_statement -> <empty>
Rule 39    condition -> expression EQ expression
Rule 40    condition -> expression NEQ expression
Rule 41    condition -> expression LE expression
Rule 42    condition -> expression LT expression
Rule 43    condition -> expression GE expression
Rule 44    condition -> expression GT expression
Rule 45    expression -> term
Rule 46    expression -> PLUS term
Rule 47    expression -> MINUS term
Rule 48    expression -> expression PLUS term
Rule 49    expression -> expression MINUS term
Rule 50    term -> factor
Rule 51    term -> term MULT factor
Rule 52    term -> term DIV factor
Rule 53    factor -> var_name
Rule 54    factor -> NUMBER
Rule 55    factor -> LPAREN expression RPAREN
Rule 56    var_name -> IDENT
Rule 57    id_list -> IDENT
Rule 58    id_list -> id_list COMMA IDENT

Terminals, with rules where they appear

ASSIGN               : 27 32
BEGIN                : 35
COLON                : 
COMMA                : 58
DIV                  : 52
DO                   : 31 32
ELSE                 : 29
END                  : 35
EQ                   : 39
FOR                  : 32
FORWARD              : 
FUNCTION             : 
GE                   : 43
GT                   : 44
IDENT                : 1 14 27 32 34 36 56 57 58
IF                   : 28
INTERVAL             : 
LBRACKET             : 
LE                   : 41
LPAREN               : 36 37 55
LT                   : 42
MINUS                : 47 49
MULT                 : 51
NEQ                  : 40
NUMBER               : 54
PERIOD               : 1
PLUS                 : 46 48
PROCEDURE            : 13
PROGRAM              : 1
RBRACKET             : 
READ                 : 36
RPAREN               : 36 37 55
SEMICOLON            : 1 3 5 8 10 13 16
THEN                 : 28
TO                   : 32
VAR                  : 7
WHILE                : 31
WRITE                : 37
error                : 

Nonterminals, with rules where they appear

assignment_statement : 18
block_statement      : 24
condition            : 28 31
else_statement       : 28
expression           : 27 32 32 37 39 39 40 40 41 41 42 42 43 43 44 44 48 49 55
factor               : 50 51 52
for_statement        : 21
id_list              : 7 58
if_statement         : 19
inblock              : 13
null_statement       : 23
outblock             : 1
proc_call_name       : 33
proc_call_statement  : 22
proc_decl            : 12
proc_name            : 13
program              : 0
read_statement       : 25
statement            : 2 15 16 17 28 29 31 32
statement_list       : 16 35
subprog_decl         : 10 11
subprog_decl_list    : 8 10
subprog_decl_part    : 2
term                 : 45 46 47 48 49 51 52
var_decl             : 5 6
var_decl_list        : 3 5
var_decl_part        : 2 15
var_name             : 53
while_statement      : 20
write_statement      : 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM IDENT SEMICOLON outblock PERIOD

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . IDENT SEMICOLON outblock PERIOD

    IDENT           shift and go to state 3


state 3

    (1) program -> PROGRAM IDENT . SEMICOLON outblock PERIOD

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM IDENT SEMICOLON . outblock PERIOD
    (2) outblock -> . var_decl_part subprog_decl_part statement
    (3) var_decl_part -> . var_decl_list SEMICOLON
    (4) var_decl_part -> .
    (5) var_decl_list -> . var_decl_list SEMICOLON var_decl
    (6) var_decl_list -> . var_decl
    (7) var_decl -> . VAR id_list

    PROCEDURE       reduce using rule 4 (var_decl_part -> .)
    IDENT           reduce using rule 4 (var_decl_part -> .)
    IF              reduce using rule 4 (var_decl_part -> .)
    WHILE           reduce using rule 4 (var_decl_part -> .)
    FOR             reduce using rule 4 (var_decl_part -> .)
    BEGIN           reduce using rule 4 (var_decl_part -> .)
    READ            reduce using rule 4 (var_decl_part -> .)
    WRITE           reduce using rule 4 (var_decl_part -> .)
    PERIOD          reduce using rule 4 (var_decl_part -> .)
    VAR             shift and go to state 9

    outblock                       shift and go to state 5
    var_decl_part                  shift and go to state 6
    var_decl_list                  shift and go to state 7
    var_decl                       shift and go to state 8

state 5

    (1) program -> PROGRAM IDENT SEMICOLON outblock . PERIOD

    PERIOD          shift and go to state 10


state 6

    (2) outblock -> var_decl_part . subprog_decl_part statement
    (8) subprog_decl_part -> . subprog_decl_list SEMICOLON
    (9) subprog_decl_part -> .
    (10) subprog_decl_list -> . subprog_decl_list SEMICOLON subprog_decl
    (11) subprog_decl_list -> . subprog_decl
    (12) subprog_decl -> . proc_decl
    (13) proc_decl -> . PROCEDURE proc_name SEMICOLON inblock

    IDENT           reduce using rule 9 (subprog_decl_part -> .)
    IF              reduce using rule 9 (subprog_decl_part -> .)
    WHILE           reduce using rule 9 (subprog_decl_part -> .)
    FOR             reduce using rule 9 (subprog_decl_part -> .)
    BEGIN           reduce using rule 9 (subprog_decl_part -> .)
    READ            reduce using rule 9 (subprog_decl_part -> .)
    WRITE           reduce using rule 9 (subprog_decl_part -> .)
    PERIOD          reduce using rule 9 (subprog_decl_part -> .)
    PROCEDURE       shift and go to state 15

    subprog_decl_part              shift and go to state 11
    subprog_decl_list              shift and go to state 12
    subprog_decl                   shift and go to state 13
    proc_decl                      shift and go to state 14

state 7

    (3) var_decl_part -> var_decl_list . SEMICOLON
    (5) var_decl_list -> var_decl_list . SEMICOLON var_decl

    SEMICOLON       shift and go to state 16


state 8

    (6) var_decl_list -> var_decl .

    SEMICOLON       reduce using rule 6 (var_decl_list -> var_decl .)


state 9

    (7) var_decl -> VAR . id_list
    (57) id_list -> . IDENT
    (58) id_list -> . id_list COMMA IDENT

    IDENT           shift and go to state 18

    id_list                        shift and go to state 17

state 10

    (1) program -> PROGRAM IDENT SEMICOLON outblock PERIOD .

    $end            reduce using rule 1 (program -> PROGRAM IDENT SEMICOLON outblock PERIOD .)


state 11

    (2) outblock -> var_decl_part subprog_decl_part . statement
    (18) statement -> . assignment_statement
    (19) statement -> . if_statement
    (20) statement -> . while_statement
    (21) statement -> . for_statement
    (22) statement -> . proc_call_statement
    (23) statement -> . null_statement
    (24) statement -> . block_statement
    (25) statement -> . read_statement
    (26) statement -> . write_statement
    (27) assignment_statement -> . IDENT ASSIGN expression
    (28) if_statement -> . IF condition THEN statement else_statement
    (31) while_statement -> . WHILE condition DO statement
    (32) for_statement -> . FOR IDENT ASSIGN expression TO expression DO statement
    (33) proc_call_statement -> . proc_call_name
    (38) null_statement -> .
    (35) block_statement -> . BEGIN statement_list END
    (36) read_statement -> . READ LPAREN IDENT RPAREN
    (37) write_statement -> . WRITE LPAREN expression RPAREN
    (34) proc_call_name -> . IDENT

    IDENT           shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    PERIOD          reduce using rule 38 (null_statement -> .)
    BEGIN           shift and go to state 34
    READ            shift and go to state 35
    WRITE           shift and go to state 36

    statement                      shift and go to state 19
    assignment_statement           shift and go to state 20
    if_statement                   shift and go to state 21
    while_statement                shift and go to state 22
    for_statement                  shift and go to state 23
    proc_call_statement            shift and go to state 24
    null_statement                 shift and go to state 25
    block_statement                shift and go to state 26
    read_statement                 shift and go to state 27
    write_statement                shift and go to state 28
    proc_call_name                 shift and go to state 33

state 12

    (8) subprog_decl_part -> subprog_decl_list . SEMICOLON
    (10) subprog_decl_list -> subprog_decl_list . SEMICOLON subprog_decl

    SEMICOLON       shift and go to state 37


state 13

    (11) subprog_decl_list -> subprog_decl .

    SEMICOLON       reduce using rule 11 (subprog_decl_list -> subprog_decl .)


state 14

    (12) subprog_decl -> proc_decl .

    SEMICOLON       reduce using rule 12 (subprog_decl -> proc_decl .)


state 15

    (13) proc_decl -> PROCEDURE . proc_name SEMICOLON inblock
    (14) proc_name -> . IDENT

    IDENT           shift and go to state 39

    proc_name                      shift and go to state 38

state 16

    (3) var_decl_part -> var_decl_list SEMICOLON .
    (5) var_decl_list -> var_decl_list SEMICOLON . var_decl
    (7) var_decl -> . VAR id_list

    PROCEDURE       reduce using rule 3 (var_decl_part -> var_decl_list SEMICOLON .)
    IDENT           reduce using rule 3 (var_decl_part -> var_decl_list SEMICOLON .)
    IF              reduce using rule 3 (var_decl_part -> var_decl_list SEMICOLON .)
    WHILE           reduce using rule 3 (var_decl_part -> var_decl_list SEMICOLON .)
    FOR             reduce using rule 3 (var_decl_part -> var_decl_list SEMICOLON .)
    BEGIN           reduce using rule 3 (var_decl_part -> var_decl_list SEMICOLON .)
    READ            reduce using rule 3 (var_decl_part -> var_decl_list SEMICOLON .)
    WRITE           reduce using rule 3 (var_decl_part -> var_decl_list SEMICOLON .)
    PERIOD          reduce using rule 3 (var_decl_part -> var_decl_list SEMICOLON .)
    SEMICOLON       reduce using rule 3 (var_decl_part -> var_decl_list SEMICOLON .)
    VAR             shift and go to state 9

    var_decl                       shift and go to state 40

state 17

    (7) var_decl -> VAR id_list .
    (58) id_list -> id_list . COMMA IDENT

    SEMICOLON       reduce using rule 7 (var_decl -> VAR id_list .)
    COMMA           shift and go to state 41


state 18

    (57) id_list -> IDENT .

    COMMA           reduce using rule 57 (id_list -> IDENT .)
    SEMICOLON       reduce using rule 57 (id_list -> IDENT .)


state 19

    (2) outblock -> var_decl_part subprog_decl_part statement .

    PERIOD          reduce using rule 2 (outblock -> var_decl_part subprog_decl_part statement .)


state 20

    (18) statement -> assignment_statement .

    PERIOD          reduce using rule 18 (statement -> assignment_statement .)
    END             reduce using rule 18 (statement -> assignment_statement .)
    SEMICOLON       reduce using rule 18 (statement -> assignment_statement .)
    ELSE            reduce using rule 18 (statement -> assignment_statement .)


state 21

    (19) statement -> if_statement .

    PERIOD          reduce using rule 19 (statement -> if_statement .)
    END             reduce using rule 19 (statement -> if_statement .)
    SEMICOLON       reduce using rule 19 (statement -> if_statement .)
    ELSE            reduce using rule 19 (statement -> if_statement .)


state 22

    (20) statement -> while_statement .

    PERIOD          reduce using rule 20 (statement -> while_statement .)
    END             reduce using rule 20 (statement -> while_statement .)
    SEMICOLON       reduce using rule 20 (statement -> while_statement .)
    ELSE            reduce using rule 20 (statement -> while_statement .)


state 23

    (21) statement -> for_statement .

    PERIOD          reduce using rule 21 (statement -> for_statement .)
    END             reduce using rule 21 (statement -> for_statement .)
    SEMICOLON       reduce using rule 21 (statement -> for_statement .)
    ELSE            reduce using rule 21 (statement -> for_statement .)


state 24

    (22) statement -> proc_call_statement .

    PERIOD          reduce using rule 22 (statement -> proc_call_statement .)
    END             reduce using rule 22 (statement -> proc_call_statement .)
    SEMICOLON       reduce using rule 22 (statement -> proc_call_statement .)
    ELSE            reduce using rule 22 (statement -> proc_call_statement .)


state 25

    (23) statement -> null_statement .

    PERIOD          reduce using rule 23 (statement -> null_statement .)
    END             reduce using rule 23 (statement -> null_statement .)
    SEMICOLON       reduce using rule 23 (statement -> null_statement .)
    ELSE            reduce using rule 23 (statement -> null_statement .)


state 26

    (24) statement -> block_statement .

    PERIOD          reduce using rule 24 (statement -> block_statement .)
    END             reduce using rule 24 (statement -> block_statement .)
    SEMICOLON       reduce using rule 24 (statement -> block_statement .)
    ELSE            reduce using rule 24 (statement -> block_statement .)


state 27

    (25) statement -> read_statement .

    PERIOD          reduce using rule 25 (statement -> read_statement .)
    END             reduce using rule 25 (statement -> read_statement .)
    SEMICOLON       reduce using rule 25 (statement -> read_statement .)
    ELSE            reduce using rule 25 (statement -> read_statement .)


state 28

    (26) statement -> write_statement .

    PERIOD          reduce using rule 26 (statement -> write_statement .)
    END             reduce using rule 26 (statement -> write_statement .)
    SEMICOLON       reduce using rule 26 (statement -> write_statement .)
    ELSE            reduce using rule 26 (statement -> write_statement .)


state 29

    (27) assignment_statement -> IDENT . ASSIGN expression
    (34) proc_call_name -> IDENT .

    ASSIGN          shift and go to state 42
    PERIOD          reduce using rule 34 (proc_call_name -> IDENT .)
    END             reduce using rule 34 (proc_call_name -> IDENT .)
    SEMICOLON       reduce using rule 34 (proc_call_name -> IDENT .)
    ELSE            reduce using rule 34 (proc_call_name -> IDENT .)


state 30

    (28) if_statement -> IF . condition THEN statement else_statement
    (39) condition -> . expression EQ expression
    (40) condition -> . expression NEQ expression
    (41) condition -> . expression LE expression
    (42) condition -> . expression LT expression
    (43) condition -> . expression GE expression
    (44) condition -> . expression GT expression
    (45) expression -> . term
    (46) expression -> . PLUS term
    (47) expression -> . MINUS term
    (48) expression -> . expression PLUS term
    (49) expression -> . expression MINUS term
    (50) term -> . factor
    (51) term -> . term MULT factor
    (52) term -> . term DIV factor
    (53) factor -> . var_name
    (54) factor -> . NUMBER
    (55) factor -> . LPAREN expression RPAREN
    (56) var_name -> . IDENT

    PLUS            shift and go to state 46
    MINUS           shift and go to state 47
    NUMBER          shift and go to state 50
    LPAREN          shift and go to state 51
    IDENT           shift and go to state 52

    condition                      shift and go to state 43
    expression                     shift and go to state 44
    term                           shift and go to state 45
    factor                         shift and go to state 48
    var_name                       shift and go to state 49

state 31

    (31) while_statement -> WHILE . condition DO statement
    (39) condition -> . expression EQ expression
    (40) condition -> . expression NEQ expression
    (41) condition -> . expression LE expression
    (42) condition -> . expression LT expression
    (43) condition -> . expression GE expression
    (44) condition -> . expression GT expression
    (45) expression -> . term
    (46) expression -> . PLUS term
    (47) expression -> . MINUS term
    (48) expression -> . expression PLUS term
    (49) expression -> . expression MINUS term
    (50) term -> . factor
    (51) term -> . term MULT factor
    (52) term -> . term DIV factor
    (53) factor -> . var_name
    (54) factor -> . NUMBER
    (55) factor -> . LPAREN expression RPAREN
    (56) var_name -> . IDENT

    PLUS            shift and go to state 46
    MINUS           shift and go to state 47
    NUMBER          shift and go to state 50
    LPAREN          shift and go to state 51
    IDENT           shift and go to state 52

    condition                      shift and go to state 53
    expression                     shift and go to state 44
    term                           shift and go to state 45
    factor                         shift and go to state 48
    var_name                       shift and go to state 49

state 32

    (32) for_statement -> FOR . IDENT ASSIGN expression TO expression DO statement

    IDENT           shift and go to state 54


state 33

    (33) proc_call_statement -> proc_call_name .

    PERIOD          reduce using rule 33 (proc_call_statement -> proc_call_name .)
    END             reduce using rule 33 (proc_call_statement -> proc_call_name .)
    SEMICOLON       reduce using rule 33 (proc_call_statement -> proc_call_name .)
    ELSE            reduce using rule 33 (proc_call_statement -> proc_call_name .)


state 34

    (35) block_statement -> BEGIN . statement_list END
    (16) statement_list -> . statement_list SEMICOLON statement
    (17) statement_list -> . statement
    (18) statement -> . assignment_statement
    (19) statement -> . if_statement
    (20) statement -> . while_statement
    (21) statement -> . for_statement
    (22) statement -> . proc_call_statement
    (23) statement -> . null_statement
    (24) statement -> . block_statement
    (25) statement -> . read_statement
    (26) statement -> . write_statement
    (27) assignment_statement -> . IDENT ASSIGN expression
    (28) if_statement -> . IF condition THEN statement else_statement
    (31) while_statement -> . WHILE condition DO statement
    (32) for_statement -> . FOR IDENT ASSIGN expression TO expression DO statement
    (33) proc_call_statement -> . proc_call_name
    (38) null_statement -> .
    (35) block_statement -> . BEGIN statement_list END
    (36) read_statement -> . READ LPAREN IDENT RPAREN
    (37) write_statement -> . WRITE LPAREN expression RPAREN
    (34) proc_call_name -> . IDENT

    IDENT           shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32
    END             reduce using rule 38 (null_statement -> .)
    SEMICOLON       reduce using rule 38 (null_statement -> .)
    BEGIN           shift and go to state 34
    READ            shift and go to state 35
    WRITE           shift and go to state 36

    statement_list                 shift and go to state 55
    statement                      shift and go to state 56
    assignment_statement           shift and go to state 20
    if_statement                   shift and go to state 21
    while_statement                shift and go to state 22
    for_statement                  shift and go to state 23
    proc_call_statement            shift and go to state 24
    null_statement                 shift and go to state 25
    block_statement                shift and go to state 26
    read_statement                 shift and go to state 27
    write_statement                shift and go to state 28
    proc_call_name                 shift and go to state 33

state 35

    (36) read_statement -> READ . LPAREN IDENT RPAREN

    LPAREN          shift and go to state 57


state 36

    (37) write_statement -> WRITE . LPAREN expression RPAREN

    LPAREN          shift and go to state 58


state 37

    (8) subprog_decl_part -> subprog_decl_list SEMICOLON .
    (10) subprog_decl_list -> subprog_decl_list SEMICOLON . subprog_decl
    (12) subprog_decl -> . proc_decl
    (13) proc_decl -> . PROCEDURE proc_name SEMICOLON inblock

    IDENT           reduce using rule 8 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    IF              reduce using rule 8 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    WHILE           reduce using rule 8 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    FOR             reduce using rule 8 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    BEGIN           reduce using rule 8 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    READ            reduce using rule 8 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    WRITE           reduce using rule 8 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    PERIOD          reduce using rule 8 (subprog_decl_part -> subprog_decl_list SEMICOLON .)
    PROCEDURE       shift and go to state 15

    subprog_decl                   shift and go to state 59
    proc_decl                      shift and go to state 14

state 38

    (13) proc_decl -> PROCEDURE proc_name . SEMICOLON inblock

    SEMICOLON       shift and go to state 60


state 39

    (14) proc_name -> IDENT .

    SEMICOLON       reduce using rule 14 (proc_name -> IDENT .)


state 40

    (5) var_decl_list -> var_decl_list SEMICOLON var_decl .

    SEMICOLON       reduce using rule 5 (var_decl_list -> var_decl_list SEMICOLON var_decl .)


state 41

    (58) id_list -> id_list COMMA . IDENT

    IDENT           shift and go to state 61


state 42

    (27) assignment_statement -> IDENT ASSIGN . expression
    (45) expression -> . term
    (46) expression -> . PLUS term
    (47) expression -> . MINUS term
    (48) expression -> . expression PLUS term
    (49) expression -> . expression MINUS term
    (50) term -> . factor
    (51) term -> . term MULT factor
    (52) term -> . term DIV factor
    (53) factor -> . var_name
    (54) factor -> . NUMBER
    (55) factor -> . LPAREN expression RPAREN
    (56) var_name -> . IDENT

    PLUS            shift and go to state 46
    MINUS           shift and go to state 47
    NUMBER          shift and go to state 50
    LPAREN          shift and go to state 51
    IDENT           shift and go to state 52

    expression                     shift and go to state 62
    term                           shift and go to state 45
    factor                         shift and go to state 48
    var_name                       shift and go to state 49

state 43

    (28) if_statement -> IF condition . THEN statement else_statement

    THEN            shift and go to state 63


state 44

    (39) condition -> expression . EQ expression
    (40) condition -> expression . NEQ expression
    (41) condition -> expression . LE expression
    (42) condition -> expression . LT expression
    (43) condition -> expression . GE expression
    (44) condition -> expression . GT expression
    (48) expression -> expression . PLUS term
    (49) expression -> expression . MINUS term

    EQ              shift and go to state 64
    NEQ             shift and go to state 65
    LE              shift and go to state 66
    LT              shift and go to state 67
    GE              shift and go to state 68
    GT              shift and go to state 69
    PLUS            shift and go to state 70
    MINUS           shift and go to state 71


state 45

    (45) expression -> term .
    (51) term -> term . MULT factor
    (52) term -> term . DIV factor

    EQ              reduce using rule 45 (expression -> term .)
    NEQ             reduce using rule 45 (expression -> term .)
    LE              reduce using rule 45 (expression -> term .)
    LT              reduce using rule 45 (expression -> term .)
    GE              reduce using rule 45 (expression -> term .)
    GT              reduce using rule 45 (expression -> term .)
    PLUS            reduce using rule 45 (expression -> term .)
    MINUS           reduce using rule 45 (expression -> term .)
    PERIOD          reduce using rule 45 (expression -> term .)
    END             reduce using rule 45 (expression -> term .)
    SEMICOLON       reduce using rule 45 (expression -> term .)
    ELSE            reduce using rule 45 (expression -> term .)
    RPAREN          reduce using rule 45 (expression -> term .)
    THEN            reduce using rule 45 (expression -> term .)
    DO              reduce using rule 45 (expression -> term .)
    TO              reduce using rule 45 (expression -> term .)
    MULT            shift and go to state 72
    DIV             shift and go to state 73


state 46

    (46) expression -> PLUS . term
    (50) term -> . factor
    (51) term -> . term MULT factor
    (52) term -> . term DIV factor
    (53) factor -> . var_name
    (54) factor -> . NUMBER
    (55) factor -> . LPAREN expression RPAREN
    (56) var_name -> . IDENT

    NUMBER          shift and go to state 50
    LPAREN          shift and go to state 51
    IDENT           shift and go to state 52

    term                           shift and go to state 74
    factor                         shift and go to state 48
    var_name                       shift and go to state 49

state 47

    (47) expression -> MINUS . term
    (50) term -> . factor
    (51) term -> . term MULT factor
    (52) term -> . term DIV factor
    (53) factor -> . var_name
    (54) factor -> . NUMBER
    (55) factor -> . LPAREN expression RPAREN
    (56) var_name -> . IDENT

    NUMBER          shift and go to state 50
    LPAREN          shift and go to state 51
    IDENT           shift and go to state 52

    term                           shift and go to state 75
    factor                         shift and go to state 48
    var_name                       shift and go to state 49

state 48

    (50) term -> factor .

    MULT            reduce using rule 50 (term -> factor .)
    DIV             reduce using rule 50 (term -> factor .)
    EQ              reduce using rule 50 (term -> factor .)
    NEQ             reduce using rule 50 (term -> factor .)
    LE              reduce using rule 50 (term -> factor .)
    LT              reduce using rule 50 (term -> factor .)
    GE              reduce using rule 50 (term -> factor .)
    GT              reduce using rule 50 (term -> factor .)
    PLUS            reduce using rule 50 (term -> factor .)
    MINUS           reduce using rule 50 (term -> factor .)
    PERIOD          reduce using rule 50 (term -> factor .)
    END             reduce using rule 50 (term -> factor .)
    SEMICOLON       reduce using rule 50 (term -> factor .)
    ELSE            reduce using rule 50 (term -> factor .)
    RPAREN          reduce using rule 50 (term -> factor .)
    THEN            reduce using rule 50 (term -> factor .)
    DO              reduce using rule 50 (term -> factor .)
    TO              reduce using rule 50 (term -> factor .)


state 49

    (53) factor -> var_name .

    MULT            reduce using rule 53 (factor -> var_name .)
    DIV             reduce using rule 53 (factor -> var_name .)
    EQ              reduce using rule 53 (factor -> var_name .)
    NEQ             reduce using rule 53 (factor -> var_name .)
    LE              reduce using rule 53 (factor -> var_name .)
    LT              reduce using rule 53 (factor -> var_name .)
    GE              reduce using rule 53 (factor -> var_name .)
    GT              reduce using rule 53 (factor -> var_name .)
    PLUS            reduce using rule 53 (factor -> var_name .)
    MINUS           reduce using rule 53 (factor -> var_name .)
    PERIOD          reduce using rule 53 (factor -> var_name .)
    END             reduce using rule 53 (factor -> var_name .)
    SEMICOLON       reduce using rule 53 (factor -> var_name .)
    ELSE            reduce using rule 53 (factor -> var_name .)
    RPAREN          reduce using rule 53 (factor -> var_name .)
    THEN            reduce using rule 53 (factor -> var_name .)
    DO              reduce using rule 53 (factor -> var_name .)
    TO              reduce using rule 53 (factor -> var_name .)


state 50

    (54) factor -> NUMBER .
